--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,9 +4,9 @@
 %table#movies
   %thead
     %tr
-      %th Movie Title
+      %th{:id => 'title_header', :class => should_highlight('title') }= link_to "Movie Title", movies_path(:sort=>'title')
       %th Rating
-      %th Release Date
+      %th{:id => 'release_date_header', :class => should_highlight('release') }= link_to "Release Date", movies_path(:sort=>'release')
       %th More Info
   %tbody
     - @movies.each do |movie|
